# Arbiter

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  railway.toml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  password.py  request_utils.py  security.py  ssrf.py
backend/app/db/: base.py  schema.sql
backend/app/db/migrations/: env.py
backend/app/schemas/: agent.py  analytics.py  auth.py  pagination.py  proxy.py  risk.py  session.py  task.py  trace.py
backend/app/tasks/: backfill_account_plans.py  health_check.py  purge_gdpr.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  test_agent_risk_api.py  test_agents_api.py  test_analytics_api.py  test_audit_api.py  test_auth_delete_me.py  test_billing_api.py  test_exception_handlers.py  test_mcp_endpoint.py  test_mcp_servers.py  test_org_memberships.py  test_proxy_api.py  test_proxy_quota.py  test_sessions.py  test_stats.py  test_tool_permissions.py  test_traces_api.py  test_vault.py
backend/tests/unit/: __init__.py  test_account_plan.py  test_agent_risk.py  test_cache_service.py  test_health_check.py  test_org_service_limits.py  test_password_policy.py  test_plan_limits.py  test_plan_service.py  test_proxy_retry.py  test_quota_alert_service.py  test_rbac_service.py  test_risk2_risk4.py  test_security.py  test_session_budget.py  test_ssrf_check.py  test_vault_service.py
(+256 files in other folders)
